<resources>
    <string name="app_name">Pesca facil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuração</string>

    <string name="login_register">Cadastre-se</string>
    <string name="Login">Login</string>

    <string name="registerFirstName">Primeiro Nome</string>
    <string name="registerSecondName">Segundo Nome</string>
    <string name="registerPhone">Telefone</string>
    <string name="registerEmail">E-mail</string>
    <string name="registerPassword">Senha</string>
    <string name="registerButton">Registrar-se</string>
    <string name="registerCancel">Calcelar</string>
    <string name="registerlogin">Logar</string>
    <string name="registerCadastro">Novo Cadastro</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Adicionar</string>
    <string name="menu_slideshow">Perfil</string>
    <string name="menu_myLocals">Meus Locais</string>
    <string name="myPerfil">Meu Perfil</string>
    <string name="UserEdit">Editar</string>


    <!--Strings Add Local - Willian Riviera-->
    <string name="localDescricao">Descrição</string>
    <string name="localPhoto">Adicionar Foto</string>
    <string name="localRua">Rua</string>
    <string name="localUf">UF</string>
    <string name="localBairro">Bairro</string>
    <string name="localComplemento">Complemento</string>
    <string name="localCep">CEP</string>
    <string name="localCidade">Cidade</string>
    <string name="localNome">Nome</string>
    <string name="localDados">Informações do Local</string>
    <string name="localEndereco">Endereço do Local</string>
    <string name="localNumero">Nº</string>
    <string name="localBuscarCep">Buscar</string>
    <string name="localBtnCancel">Cancelar</string>
    <string name="localBtnConfirm">Publicar</string>
    <string name="localLatitude">Latitude</string>
    <string name="localLongitude">Longitude</string>
    <string name="localAddImg">Adicionar Imagem</string>
    <string-array name="LocalListUFs">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Img">TODO</string>

</resources>