<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTintMode="src_in"
    app:layout_constraintCircleRadius="15dp"
    tools:context=".ui.gallery.GalleryFragment">

    <ScrollView
        android:id="@+id/ScroolViewAddLocal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/CardViewAddLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:id="@+id/LinearLayoutAddLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextViewLocalDados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/localDados"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/editTextLocalNome"
                    android:layout_width="333dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#000000"
                    android:ems="10"
                    android:hint="@string/localNome"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:textColorHint="#000000"
                    android:textColorLink="#000000" />

                <EditText
                    android:id="@+id/editTextLocalDescricao"
                    android:layout_width="333dp"
                    android:layout_height="89dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#000000"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/localDescricao"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:textColorHint="#000000"
                    android:textColorLink="#000000" />

                <com.google.android.gms.maps.MapView
                    android:id="@+id/MapsAddLocal"
                    android:layout_width="333dp"
                    android:layout_height="148dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/textViewLocalAdress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/localEndereco"
                    android:textColor="#000000" />

                <LinearLayout
                    android:id="@+id/LinerarLayoutCep"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextLocalCep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/localCep"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned" />

                    <Button
                        android:id="@+id/buttonFindCep"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/localBuscarCep" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editTextLocalRua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/localRua"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:id="@+id/LinearLayoutBairroN"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextLocalBairro"
                        android:layout_width="166dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/localBairro"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editTextLocalNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/localNumero"
                        android:importantForAutofill="no"
                        android:inputType="number" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editTextLocalComplemento"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/localComplemento"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:id="@+id/LineraLayoutCidadeUF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextLocalCidade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/localCidade"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textViewLocalUF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/localUf"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinnerLocalUf"
                        android:layout_width="87dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:spinnerMode="dropdown" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayoutButtons"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonLocalCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/localBtnCancel" />

                    <Button
                        android:id="@+id/buttonLocalConfirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/localBtnConfirm" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>