<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMyPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/myPerfil"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageViewPerfilUser"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:src="@drawable/avatar" />

        <Button
            android:id="@+id/buttonEditUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:drawableStart="@drawable/ic_edit"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/UserEdit"
            android:textColor="#1951EC" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextPersonFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="#1951EC"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/registerFirstName"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editTextPersonSecondName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="#1951EC"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/registerSecondName"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editTextPersonPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="#1951EC"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/registerPhone"
                        android:importantForAutofill="no"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/editTextPersonMail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="#1951EC"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/registerEmail"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editTextPersonPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="#1951EC"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/registerPassword"
                        android:importantForAutofill="no"
                        android:inputType="textPassword" />
                </LinearLayout>
            </ScrollView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>